parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> declaration
Rule 5     function_definition -> type_specifier declarator compound_statement
Rule 6     type_specifier -> VOID
Rule 7     type_specifier -> CHAR
Rule 8     type_specifier -> SHORT
Rule 9     type_specifier -> INT
Rule 10    type_specifier -> LONG
Rule 11    type_specifier -> FLOAT
Rule 12    type_specifier -> DOUBLE
Rule 13    type_specifier -> SIGNED
Rule 14    type_specifier -> UNSIGNED
Rule 15    declarator -> pointer direct_declarator
Rule 16    declarator -> direct_declarator
Rule 17    pointer -> TIMES
Rule 18    pointer -> TIMES pointer
Rule 19    direct_declarator -> ID
Rule 20    direct_declarator -> LPAREN declarator RPAREN
Rule 21    direct_declarator -> direct_declarator LBRACKET constant_expression RBRACKET
Rule 22    direct_declarator -> direct_declarator LBRACKET RBRACKET
Rule 23    direct_declarator -> direct_declarator LPAREN parameter_type_list RPAREN
Rule 24    direct_declarator -> direct_declarator LPAREN identifier_list RPAREN
Rule 25    direct_declarator -> direct_declarator LPAREN RPAREN
Rule 26    constant_expression -> conditional_expression
Rule 27    conditional_expression -> logical_or_expression
Rule 28    conditional_expression -> logical_or_expression CONDOP expression COLON conditional_expression
Rule 29    logical_or_expression -> logical_and_expression
Rule 30    logical_or_expression -> logical_or_expression LOR logical_and_expression
Rule 31    logical_and_expression -> inclusive_or_expression
Rule 32    logical_and_expression -> logical_and_expression LAND inclusive_or_expression
Rule 33    inclusive_or_expression -> exclusive_or_expression
Rule 34    inclusive_or_expression -> inclusive_or_expression OR exclusive_or_expression
Rule 35    exclusive_or_expression -> and_expression
Rule 36    exclusive_or_expression -> exclusive_or_expression XOR and_expression
Rule 37    and_expression -> equality_expression
Rule 38    and_expression -> and_expression AND equality_expression
Rule 39    equality_expression -> relational_expression
Rule 40    equality_expression -> equality_expression EQ relational_expression
Rule 41    equality_expression -> equality_expression NE relational_expression
Rule 42    relational_expression -> shift_expression
Rule 43    relational_expression -> relational_expression LT shift_expression
Rule 44    relational_expression -> relational_expression GT shift_expression
Rule 45    relational_expression -> relational_expression LE shift_expression
Rule 46    relational_expression -> relational_expression GE shift_expression
Rule 47    shift_expression -> additive_expression
Rule 48    shift_expression -> shift_expression LSHIFT additive_expression
Rule 49    shift_expression -> shift_expression RSHIFT additive_expression
Rule 50    additive_expression -> multiplicative_expression
Rule 51    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 52    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 53    multiplicative_expression -> cast_expression
Rule 54    multiplicative_expression -> multiplicative_expression TIMES cast_expression
Rule 55    multiplicative_expression -> multiplicative_expression DIVIDE cast_expression
Rule 56    multiplicative_expression -> multiplicative_expression MOD cast_expression
Rule 57    cast_expression -> unary_expression
Rule 58    cast_expression -> LPAREN type_name RPAREN cast_expression
Rule 59    unary_expression -> postfix_expression
Rule 60    unary_expression -> PLUSPLUS unary_expression
Rule 61    unary_expression -> MINUSMINUS unary_expression
Rule 62    unary_expression -> unary_operator cast_expression
Rule 63    unary_expression -> SIZEOF unary_expression
Rule 64    unary_expression -> SIZEOF LPAREN type_name RPAREN
Rule 65    postfix_expression -> primary_expression
Rule 66    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 67    postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 68    postfix_expression -> postfix_expression LPAREN RPAREN
Rule 69    postfix_expression -> postfix_expression PERIOD ID
Rule 70    postfix_expression -> postfix_expression ARROW ID
Rule 71    postfix_expression -> postfix_expression PLUSPLUS
Rule 72    postfix_expression -> postfix_expression MINUSMINUS
Rule 73    primary_expression -> ID
Rule 74    primary_expression -> constant
Rule 75    primary_expression -> SCONST
Rule 76    primary_expression -> LPAREN expression RPAREN
Rule 77    constant -> ICONST
Rule 78    constant -> FCONST
Rule 79    constant -> CCONST
Rule 80    expression -> assignment_expression
Rule 81    expression -> expression COMMA assignment_expression
Rule 82    assignment_expression -> conditional_expression
Rule 83    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 84    assignment_operator -> EQUALS
Rule 85    assignment_operator -> TIMESEQUAL
Rule 86    assignment_operator -> DIVEQUAL
Rule 87    assignment_operator -> MODEQUAL
Rule 88    assignment_operator -> PLUSEQUAL
Rule 89    assignment_operator -> MINUSEQUAL
Rule 90    assignment_operator -> LSHIFTEQUAL
Rule 91    assignment_operator -> RSHIFTEQUAL
Rule 92    assignment_operator -> ANDEQUAL
Rule 93    assignment_operator -> OREQUAL
Rule 94    assignment_operator -> XOREQUAL
Rule 95    unary_operator -> AND
Rule 96    unary_operator -> TIMES
Rule 97    unary_operator -> PLUS
Rule 98    unary_operator -> MINUS
Rule 99    unary_operator -> NOT
Rule 100   unary_operator -> LNOT
Rule 101   type_name -> type_specifier abstract_declarator
Rule 102   type_name -> type_specifier
Rule 103   parameter_type_list -> parameter_list
Rule 104   parameter_type_list -> parameter_list COMMA ELLIPSIS
Rule 105   parameter_list -> parameter_declaration
Rule 106   parameter_list -> parameter_list COMMA parameter_declaration
Rule 107   parameter_declaration -> type_specifier declarator
Rule 108   parameter_declaration -> type_specifier abstract_declarator
Rule 109   parameter_declaration -> type_specifier
Rule 110   abstract_declarator -> pointer
Rule 111   abstract_declarator -> pointer direct_abstract_declarator
Rule 112   abstract_declarator -> direct_abstract_declarator
Rule 113   direct_abstract_declarator -> LPAREN abstract_declarator RPAREN
Rule 114   direct_abstract_declarator -> direct_abstract_declarator LBRACKET constant_expression RBRACKET
Rule 115   direct_abstract_declarator -> direct_abstract_declarator LBRACKET RBRACKET
Rule 116   direct_abstract_declarator -> LBRACKET constant_expression RBRACKET
Rule 117   direct_abstract_declarator -> LBRACKET RBRACKET
Rule 118   direct_abstract_declarator -> direct_abstract_declarator LPAREN parameter_type_list RPAREN
Rule 119   direct_abstract_declarator -> LPAREN parameter_type_list RPAREN
Rule 120   declaration -> type_specifier init_declarator_list SEMI
Rule 121   declaration -> type_specifier SEMI
Rule 122   declaration_list -> declaration
Rule 123   declaration_list -> declaration_list declaration
Rule 124   init_declarator -> declarator
Rule 125   init_declarator -> declarator EQUALS initializer
Rule 126   init_declarator_list -> init_declarator
Rule 127   init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 128   initializer -> assignment_expression
Rule 129   initializer -> LBRACE initializer_list RBRACE
Rule 130   initializer -> LBRACE initializer_list COMMA RBRACE
Rule 131   initializer_list -> initializer
Rule 132   initializer_list -> initializer_list COMMA initializer
Rule 133   compound_statement -> LBRACE declaration_list statement_list RBRACE
Rule 134   compound_statement -> LBRACE statement_list RBRACE
Rule 135   compound_statement -> LBRACE declaration_list RBRACE
Rule 136   compound_statement -> LBRACE RBRACE
Rule 137   statement -> expression_statement
Rule 138   statement -> compound_statement
Rule 139   statement -> selection_statement
Rule 140   statement -> iteration_statement
Rule 141   statement -> jump_statement
Rule 142   statement_list -> statement
Rule 143   statement_list -> statement_list statement
Rule 144   expression_statement -> expression SEMI
Rule 145   selection_statement -> IF LPAREN expression RPAREN statement
Rule 146   selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 147   iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 148   iteration_statement -> FOR LPAREN expression SEMI expression SEMI expression RPAREN statement
Rule 149   jump_statement -> BREAK SEMI
Rule 150   jump_statement -> RETURN expression SEMI
Rule 151   jump_statement -> RETURN SEMI
Rule 152   argument_expression_list -> assignment_expression
Rule 153   argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 154   identifier_list -> ID
Rule 155   identifier_list -> identifier_list COMMA ID
Rule 156   empty -> <empty>

Terminals, with rules where they appear

AND                  : 38 95
ANDEQUAL             : 92
ARROW                : 70
BREAK                : 149
CCONST               : 79
CHAR                 : 7
COLON                : 28
COMMA                : 81 104 106 127 130 132 153 155
CONDOP               : 28
DIVEQUAL             : 86
DIVIDE               : 55
DOUBLE               : 12
ELLIPSIS             : 104
ELSE                 : 146
EQ                   : 40
EQUALS               : 84 125
FCONST               : 78
FLOAT                : 11
FOR                  : 148
GE                   : 46
GT                   : 44
ICONST               : 77
ID                   : 19 69 70 73 154 155
IF                   : 145 146
INT                  : 9
LAND                 : 32
LBRACE               : 129 130 133 134 135 136
LBRACKET             : 21 22 66 114 115 116 117
LE                   : 45
LNOT                 : 100
LONG                 : 10
LOR                  : 30
LPAREN               : 20 23 24 25 58 64 67 68 76 113 118 119 145 146 147 148
LSHIFT               : 48
LSHIFTEQUAL          : 90
LT                   : 43
MINUS                : 52 98
MINUSEQUAL           : 89
MINUSMINUS           : 61 72
MOD                  : 56
MODEQUAL             : 87
NE                   : 41
NOT                  : 99
OR                   : 34
OREQUAL              : 93
PERIOD               : 69
PLUS                 : 51 97
PLUSEQUAL            : 88
PLUSPLUS             : 60 71
RBRACE               : 129 130 133 134 135 136
RBRACKET             : 21 22 66 114 115 116 117
RETURN               : 150 151
RPAREN               : 20 23 24 25 58 64 67 68 76 113 118 119 145 146 147 148
RSHIFT               : 49
RSHIFTEQUAL          : 91
SCONST               : 75
SEMI                 : 120 121 144 148 148 149 150 151
SHORT                : 8
SIGNED               : 13
SIZEOF               : 63 64
TIMES                : 17 18 54 96
TIMESEQUAL           : 85
UNSIGNED             : 14
VOID                 : 6
WHILE                : 147
XOR                  : 36
XOREQUAL             : 94
error                : 

Nonterminals, with rules where they appear

abstract_declarator  : 101 108 113
additive_expression  : 47 48 49 51 52
and_expression       : 35 36 38
argument_expression_list : 67 153
assignment_expression : 80 81 83 128 152 153
assignment_operator  : 83
cast_expression      : 53 54 55 56 58 62
compound_statement   : 5 138
conditional_expression : 26 28 82
constant             : 74
constant_expression  : 21 114 116
declaration          : 4 122 123
declaration_list     : 123 133 135
declarator           : 5 20 107 124 125
direct_abstract_declarator : 111 112 114 115 118
direct_declarator    : 15 16 21 22 23 24 25
empty                : 
equality_expression  : 37 38 40 41
exclusive_or_expression : 33 34 36
expression           : 28 66 76 81 144 145 146 147 148 148 148 150
expression_statement : 137
external_declaration : 1 2
function_definition  : 3
identifier_list      : 24 155
inclusive_or_expression : 31 32 34
init_declarator      : 126 127
init_declarator_list : 120 127
initializer          : 125 131 132
initializer_list     : 129 130 132
iteration_statement  : 140
jump_statement       : 141
logical_and_expression : 29 30 32
logical_or_expression : 27 28 30
multiplicative_expression : 50 51 52 54 55 56
parameter_declaration : 105 106
parameter_list       : 103 104 106
parameter_type_list  : 23 118 119
pointer              : 15 18 110 111
postfix_expression   : 59 66 67 68 69 70 71 72
primary_expression   : 65
relational_expression : 39 40 41 43 44 45 46
selection_statement  : 139
shift_expression     : 42 43 44 45 46 48 49
statement            : 142 143 145 146 146 147 148
statement_list       : 133 134 143
translation_unit     : 2 0
type_name            : 58 64
type_specifier       : 5 101 102 107 108 109 120 121
unary_expression     : 57 60 61 63 83
unary_operator       : 62

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . type_specifier declarator compound_statement
    (120) declaration -> . type_specifier init_declarator_list SEMI
    (121) declaration -> . type_specifier SEMI
    (6) type_specifier -> . VOID
    (7) type_specifier -> . CHAR
    (8) type_specifier -> . SHORT
    (9) type_specifier -> . INT
    (10) type_specifier -> . LONG
    (11) type_specifier -> . FLOAT
    (12) type_specifier -> . DOUBLE
    (13) type_specifier -> . SIGNED
    (14) type_specifier -> . UNSIGNED

    VOID            shift and go to state 6
    CHAR            shift and go to state 7
    SHORT           shift and go to state 8
    INT             shift and go to state 9
    LONG            shift and go to state 10
    FLOAT           shift and go to state 11
    DOUBLE          shift and go to state 12
    SIGNED          shift and go to state 13
    UNSIGNED        shift and go to state 14

    translation_unit               shift and go to state 1
    external_declaration           shift and go to state 2
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    type_specifier                 shift and go to state 5

state 1

    (0) S' -> translation_unit .
    (2) translation_unit -> translation_unit . external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . type_specifier declarator compound_statement
    (120) declaration -> . type_specifier init_declarator_list SEMI
    (121) declaration -> . type_specifier SEMI
    (6) type_specifier -> . VOID
    (7) type_specifier -> . CHAR
    (8) type_specifier -> . SHORT
    (9) type_specifier -> . INT
    (10) type_specifier -> . LONG
    (11) type_specifier -> . FLOAT
    (12) type_specifier -> . DOUBLE
    (13) type_specifier -> . SIGNED
    (14) type_specifier -> . UNSIGNED

    VOID            shift and go to state 6
    CHAR            shift and go to state 7
    SHORT           shift and go to state 8
    INT             shift and go to state 9
    LONG            shift and go to state 10
    FLOAT           shift and go to state 11
    DOUBLE          shift and go to state 12
    SIGNED          shift and go to state 13
    UNSIGNED        shift and go to state 14

    external_declaration           shift and go to state 15
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    type_specifier                 shift and go to state 5

state 2

    (1) translation_unit -> external_declaration .

    VOID            reduce using rule 1 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 1 (translation_unit -> external_declaration .)
    SHORT           reduce using rule 1 (translation_unit -> external_declaration .)
    INT             reduce using rule 1 (translation_unit -> external_declaration .)
    LONG            reduce using rule 1 (translation_unit -> external_declaration .)
    FLOAT           reduce using rule 1 (translation_unit -> external_declaration .)
    DOUBLE          reduce using rule 1 (translation_unit -> external_declaration .)
    SIGNED          reduce using rule 1 (translation_unit -> external_declaration .)
    UNSIGNED        reduce using rule 1 (translation_unit -> external_declaration .)
    $end            reduce using rule 1 (translation_unit -> external_declaration .)


state 3

    (3) external_declaration -> function_definition .

    VOID            reduce using rule 3 (external_declaration -> function_definition .)
    CHAR            reduce using rule 3 (external_declaration -> function_definition .)
    SHORT           reduce using rule 3 (external_declaration -> function_definition .)
    INT             reduce using rule 3 (external_declaration -> function_definition .)
    LONG            reduce using rule 3 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 3 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 3 (external_declaration -> function_definition .)
    SIGNED          reduce using rule 3 (external_declaration -> function_definition .)
    UNSIGNED        reduce using rule 3 (external_declaration -> function_definition .)
    $end            reduce using rule 3 (external_declaration -> function_definition .)


state 4

    (4) external_declaration -> declaration .

    VOID            reduce using rule 4 (external_declaration -> declaration .)
    CHAR            reduce using rule 4 (external_declaration -> declaration .)
    SHORT           reduce using rule 4 (external_declaration -> declaration .)
    INT             reduce using rule 4 (external_declaration -> declaration .)
    LONG            reduce using rule 4 (external_declaration -> declaration .)
    FLOAT           reduce using rule 4 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 4 (external_declaration -> declaration .)
    SIGNED          reduce using rule 4 (external_declaration -> declaration .)
    UNSIGNED        reduce using rule 4 (external_declaration -> declaration .)
    $end            reduce using rule 4 (external_declaration -> declaration .)


state 5

    (5) function_definition -> type_specifier . declarator compound_statement
    (120) declaration -> type_specifier . init_declarator_list SEMI
    (121) declaration -> type_specifier . SEMI
    (15) declarator -> . pointer direct_declarator
    (16) declarator -> . direct_declarator
    (126) init_declarator_list -> . init_declarator
    (127) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (17) pointer -> . TIMES
    (18) pointer -> . TIMES pointer
    (19) direct_declarator -> . ID
    (20) direct_declarator -> . LPAREN declarator RPAREN
    (21) direct_declarator -> . direct_declarator LBRACKET constant_expression RBRACKET
    (22) direct_declarator -> . direct_declarator LBRACKET RBRACKET
    (23) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (24) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (25) direct_declarator -> . direct_declarator LPAREN RPAREN
    (124) init_declarator -> . declarator
    (125) init_declarator -> . declarator EQUALS initializer

    SEMI            shift and go to state 18
    TIMES           shift and go to state 22
    ID              shift and go to state 23
    LPAREN          shift and go to state 24

    declarator                     shift and go to state 16
    init_declarator_list           shift and go to state 17
    pointer                        shift and go to state 19
    direct_declarator              shift and go to state 20
    init_declarator                shift and go to state 21

state 6

    (6) type_specifier -> VOID .

    SEMI            reduce using rule 6 (type_specifier -> VOID .)
    TIMES           reduce using rule 6 (type_specifier -> VOID .)
    ID              reduce using rule 6 (type_specifier -> VOID .)
    LPAREN          reduce using rule 6 (type_specifier -> VOID .)
    LBRACKET        reduce using rule 6 (type_specifier -> VOID .)
    COMMA           reduce using rule 6 (type_specifier -> VOID .)
    RPAREN          reduce using rule 6 (type_specifier -> VOID .)


state 7

    (7) type_specifier -> CHAR .

    SEMI            reduce using rule 7 (type_specifier -> CHAR .)
    TIMES           reduce using rule 7 (type_specifier -> CHAR .)
    ID              reduce using rule 7 (type_specifier -> CHAR .)
    LPAREN          reduce using rule 7 (type_specifier -> CHAR .)
    LBRACKET        reduce using rule 7 (type_specifier -> CHAR .)
    COMMA           reduce using rule 7 (type_specifier -> CHAR .)
    RPAREN          reduce using rule 7 (type_specifier -> CHAR .)


state 8

    (8) type_specifier -> SHORT .

    SEMI            reduce using rule 8 (type_specifier -> SHORT .)
    TIMES           reduce using rule 8 (type_specifier -> SHORT .)
    ID              reduce using rule 8 (type_specifier -> SHORT .)
    LPAREN          reduce using rule 8 (type_specifier -> SHORT .)
    LBRACKET        reduce using rule 8 (type_specifier -> SHORT .)
    COMMA           reduce using rule 8 (type_specifier -> SHORT .)
    RPAREN          reduce using rule 8 (type_specifier -> SHORT .)


state 9

    (9) type_specifier -> INT .

    SEMI            reduce using rule 9 (type_specifier -> INT .)
    TIMES           reduce using rule 9 (type_specifier -> INT .)
    ID              reduce using rule 9 (type_specifier -> INT .)
    LPAREN          reduce using rule 9 (type_specifier -> INT .)
    LBRACKET        reduce using rule 9 (type_specifier -> INT .)
    COMMA           reduce using rule 9 (type_specifier -> INT .)
    RPAREN          reduce using rule 9 (type_specifier -> INT .)


state 10

    (10) type_specifier -> LONG .

    SEMI            reduce using rule 10 (type_specifier -> LONG .)
    TIMES           reduce using rule 10 (type_specifier -> LONG .)
    ID              reduce using rule 10 (type_specifier -> LONG .)
    LPAREN          reduce using rule 10 (type_specifier -> LONG .)
    LBRACKET        reduce using rule 10 (type_specifier -> LONG .)
    COMMA           reduce using rule 10 (type_specifier -> LONG .)
    RPAREN          reduce using rule 10 (type_specifier -> LONG .)


state 11

    (11) type_specifier -> FLOAT .

    SEMI            reduce using rule 11 (type_specifier -> FLOAT .)
    TIMES           reduce using rule 11 (type_specifier -> FLOAT .)
    ID              reduce using rule 11 (type_specifier -> FLOAT .)
    LPAREN          reduce using rule 11 (type_specifier -> FLOAT .)
    LBRACKET        reduce using rule 11 (type_specifier -> FLOAT .)
    COMMA           reduce using rule 11 (type_specifier -> FLOAT .)
    RPAREN          reduce using rule 11 (type_specifier -> FLOAT .)


state 12

    (12) type_specifier -> DOUBLE .

    SEMI            reduce using rule 12 (type_specifier -> DOUBLE .)
    TIMES           reduce using rule 12 (type_specifier -> DOUBLE .)
    ID              reduce using rule 12 (type_specifier -> DOUBLE .)
    LPAREN          reduce using rule 12 (type_specifier -> DOUBLE .)
    LBRACKET        reduce using rule 12 (type_specifier -> DOUBLE .)
    COMMA           reduce using rule 12 (type_specifier -> DOUBLE .)
    RPAREN          reduce using rule 12 (type_specifier -> DOUBLE .)


state 13

    (13) type_specifier -> SIGNED .

    SEMI            reduce using rule 13 (type_specifier -> SIGNED .)
    TIMES           reduce using rule 13 (type_specifier -> SIGNED .)
    ID              reduce using rule 13 (type_specifier -> SIGNED .)
    LPAREN          reduce using rule 13 (type_specifier -> SIGNED .)
    LBRACKET        reduce using rule 13 (type_specifier -> SIGNED .)
    COMMA           reduce using rule 13 (type_specifier -> SIGNED .)
    RPAREN          reduce using rule 13 (type_specifier -> SIGNED .)


state 14

    (14) type_specifier -> UNSIGNED .

    SEMI            reduce using rule 14 (type_specifier -> UNSIGNED .)
    TIMES           reduce using rule 14 (type_specifier -> UNSIGNED .)
    ID              reduce using rule 14 (type_specifier -> UNSIGNED .)
    LPAREN          reduce using rule 14 (type_specifier -> UNSIGNED .)
    LBRACKET        reduce using rule 14 (type_specifier -> UNSIGNED .)
    COMMA           reduce using rule 14 (type_specifier -> UNSIGNED .)
    RPAREN          reduce using rule 14 (type_specifier -> UNSIGNED .)


state 15

    (2) translation_unit -> translation_unit external_declaration .

    VOID            reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    CHAR            reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    SHORT           reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    INT             reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    LONG            reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    FLOAT           reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    DOUBLE          reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    SIGNED          reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    UNSIGNED        reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    $end            reduce using rule 2 (translation_unit -> translation_unit external_declaration .)


state 16

    (5) function_definition -> type_specifier declarator . compound_statement
    (124) init_declarator -> declarator .
    (125) init_declarator -> declarator . EQUALS initializer
    (133) compound_statement -> . LBRACE declaration_list statement_list RBRACE
    (134) compound_statement -> . LBRACE statement_list RBRACE
    (135) compound_statement -> . LBRACE declaration_list RBRACE
    (136) compound_statement -> . LBRACE RBRACE

    SEMI            reduce using rule 124 (init_declarator -> declarator .)
    COMMA           reduce using rule 124 (init_declarator -> declarator .)
    EQUALS          shift and go to state 26
    LBRACE          shift and go to state 27

    compound_statement             shift and go to state 25

state 17

    (120) declaration -> type_specifier init_declarator_list . SEMI
    (127) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI            shift and go to state 28
    COMMA           shift and go to state 29


state 18

    (121) declaration -> type_specifier SEMI .

    VOID            reduce using rule 121 (declaration -> type_specifier SEMI .)
    CHAR            reduce using rule 121 (declaration -> type_specifier SEMI .)
    SHORT           reduce using rule 121 (declaration -> type_specifier SEMI .)
    INT             reduce using rule 121 (declaration -> type_specifier SEMI .)
    LONG            reduce using rule 121 (declaration -> type_specifier SEMI .)
    FLOAT           reduce using rule 121 (declaration -> type_specifier SEMI .)
    DOUBLE          reduce using rule 121 (declaration -> type_specifier SEMI .)
    SIGNED          reduce using rule 121 (declaration -> type_specifier SEMI .)
    UNSIGNED        reduce using rule 121 (declaration -> type_specifier SEMI .)
    $end            reduce using rule 121 (declaration -> type_specifier SEMI .)
    RBRACE          reduce using rule 121 (declaration -> type_specifier SEMI .)
    LBRACE          reduce using rule 121 (declaration -> type_specifier SEMI .)
    IF              reduce using rule 121 (declaration -> type_specifier SEMI .)
    WHILE           reduce using rule 121 (declaration -> type_specifier SEMI .)
    FOR             reduce using rule 121 (declaration -> type_specifier SEMI .)
    BREAK           reduce using rule 121 (declaration -> type_specifier SEMI .)
    RETURN          reduce using rule 121 (declaration -> type_specifier SEMI .)
    PLUSPLUS        reduce using rule 121 (declaration -> type_specifier SEMI .)
    MINUSMINUS      reduce using rule 121 (declaration -> type_specifier SEMI .)
    SIZEOF          reduce using rule 121 (declaration -> type_specifier SEMI .)
    AND             reduce using rule 121 (declaration -> type_specifier SEMI .)
    TIMES           reduce using rule 121 (declaration -> type_specifier SEMI .)
    PLUS            reduce using rule 121 (declaration -> type_specifier SEMI .)
    MINUS           reduce using rule 121 (declaration -> type_specifier SEMI .)
    NOT             reduce using rule 121 (declaration -> type_specifier SEMI .)
    LNOT            reduce using rule 121 (declaration -> type_specifier SEMI .)
    ID              reduce using rule 121 (declaration -> type_specifier SEMI .)
    SCONST          reduce using rule 121 (declaration -> type_specifier SEMI .)
    LPAREN          reduce using rule 121 (declaration -> type_specifier SEMI .)
    ICONST          reduce using rule 121 (declaration -> type_specifier SEMI .)
    FCONST          reduce using rule 121 (declaration -> type_specifier SEMI .)
    CCONST          reduce using rule 121 (declaration -> type_specifier SEMI .)


state 19

    (15) declarator -> pointer . direct_declarator
    (19) direct_declarator -> . ID
    (20) direct_declarator -> . LPAREN declarator RPAREN
    (21) direct_declarator -> . direct_declarator LBRACKET constant_expression RBRACKET
    (22) direct_declarator -> . direct_declarator LBRACKET RBRACKET
    (23) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (24) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (25) direct_declarator -> . direct_declarator LPAREN RPAREN

    ID              shift and go to state 23
    LPAREN          shift and go to state 24

    direct_declarator              shift and go to state 30

state 20

    (16) declarator -> direct_declarator .
    (21) direct_declarator -> direct_declarator . LBRACKET constant_expression RBRACKET
    (22) direct_declarator -> direct_declarator . LBRACKET RBRACKET
    (23) direct_declarator -> direct_declarator . LPAREN parameter_type_list RPAREN
    (24) direct_declarator -> direct_declarator . LPAREN identifier_list RPAREN
    (25) direct_declarator -> direct_declarator . LPAREN RPAREN

    EQUALS          reduce using rule 16 (declarator -> direct_declarator .)
    LBRACE          reduce using rule 16 (declarator -> direct_declarator .)
    SEMI            reduce using rule 16 (declarator -> direct_declarator .)
    COMMA           reduce using rule 16 (declarator -> direct_declarator .)
    RPAREN          reduce using rule 16 (declarator -> direct_declarator .)
    LBRACKET        shift and go to state 31
    LPAREN          shift and go to state 32


state 21

    (126) init_declarator_list -> init_declarator .

    SEMI            reduce using rule 126 (init_declarator_list -> init_declarator .)
    COMMA           reduce using rule 126 (init_declarator_list -> init_declarator .)


state 22

    (17) pointer -> TIMES .
    (18) pointer -> TIMES . pointer
    (17) pointer -> . TIMES
    (18) pointer -> . TIMES pointer

    ID              reduce using rule 17 (pointer -> TIMES .)
    LPAREN          reduce using rule 17 (pointer -> TIMES .)
    LBRACKET        reduce using rule 17 (pointer -> TIMES .)
    COMMA           reduce using rule 17 (pointer -> TIMES .)
    RPAREN          reduce using rule 17 (pointer -> TIMES .)
    TIMES           shift and go to state 22

    pointer                        shift and go to state 33

state 23

    (19) direct_declarator -> ID .

    LBRACKET        reduce using rule 19 (direct_declarator -> ID .)
    LPAREN          reduce using rule 19 (direct_declarator -> ID .)
    EQUALS          reduce using rule 19 (direct_declarator -> ID .)
    LBRACE          reduce using rule 19 (direct_declarator -> ID .)
    SEMI            reduce using rule 19 (direct_declarator -> ID .)
    COMMA           reduce using rule 19 (direct_declarator -> ID .)
    RPAREN          reduce using rule 19 (direct_declarator -> ID .)


state 24

    (20) direct_declarator -> LPAREN . declarator RPAREN
    (15) declarator -> . pointer direct_declarator
    (16) declarator -> . direct_declarator
    (17) pointer -> . TIMES
    (18) pointer -> . TIMES pointer
    (19) direct_declarator -> . ID
    (20) direct_declarator -> . LPAREN declarator RPAREN
    (21) direct_declarator -> . direct_declarator LBRACKET constant_expression RBRACKET
    (22) direct_declarator -> . direct_declarator LBRACKET RBRACKET
    (23) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (24) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (25) direct_declarator -> . direct_declarator LPAREN RPAREN

    TIMES           shift and go to state 22
    ID              shift and go to state 23
    LPAREN          shift and go to state 24

    declarator                     shift and go to state 34
    pointer                        shift and go to state 19
    direct_declarator              shift and go to state 20

state 25

    (5) function_definition -> type_specifier declarator compound_statement .

    VOID            reduce using rule 5 (function_definition -> type_specifier declarator compound_statement .)
    CHAR            reduce using rule 5 (function_definition -> type_specifier declarator compound_statement .)
    SHORT           reduce using rule 5 (function_definition -> type_specifier declarator compound_statement .)
    INT             reduce using rule 5 (function_definition -> type_specifier declarator compound_statement .)
    LONG            reduce using rule 5 (function_definition -> type_specifier declarator compound_statement .)
    FLOAT           reduce using rule 5 (function_definition -> type_specifier declarator compound_statement .)
    DOUBLE          reduce using rule 5 (function_definition -> type_specifier declarator compound_statement .)
    SIGNED          reduce using rule 5 (function_definition -> type_specifier declarator compound_statement .)
    UNSIGNED        reduce using rule 5 (function_definition -> type_specifier declarator compound_statement .)
    $end            reduce using rule 5 (function_definition -> type_specifier declarator compound_statement .)


state 26
